workspaces/frontend/manifests/kustomize/istio/options/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend
spec:
  host: nb-frontend.workspace-controller-system.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
